Fixing label for textareas not wrapped in .form-group (#270)

--- a/src/styles/components/forms/textarea/_default.scss
+++ b/src/styles/components/forms/textarea/_default.scss
@@ -2,6 +2,7 @@ $textarea-padding: 8px !default;
 $scrollbarWidth: 7px !default; // Browser scrollbar width
 
 .mc-form-textarea {
+  position: relative;
   width: 100%;
   background: $mc-color-light;
   border: 1px solid $mc-color-gray-600;
